# vimmit

./: .gitignore  README.md  cli.py  game_roller.py  get_games.py  pyproject.toml  requirements.txt  utils.py  vimm_crawler.py  vimm_crawler_v2.py  vimm_roller.py  vimmit.py
src/: cli.py  data.py  data_objects.py  exceptions.py  format.py  run.py  setup.py  system_scraper.py  vimm_crawler.py  vimm_roller.py  vimm_scraper.py  vimmit.py
src/classes/: blacklist.py  data.py  vimm_roller.py  vimm_scraper.py  vimmit.py
src/utils/: cli.py  format.py  setup.py
vimmit/: __main__.py  run.py
vimmit/app/: _delete.py  _get_args.py  _setup.py  _systems.py  vimmit.py
vimmit/classes/: data.py  data_objects.py  vimm_roller.py  vimm_scraper.py  vimmit.py
vimmit/common/: console.py  exceptions.py
vimmit/data/: base_data.py  blacklist.py  config.py  exporter.py  games.py  import_export.py  importer.py
vimmit/data/io/: _validate_path.py  exporter.py  exporters.py  importer.py  io_utils.py
vimmit/services/: vimm_extractor.py  vimm_roller.py  vimm_scraper.py
vimmit/utils/: cli.py  delete.py  exceptions.py  filepath.py  format.py  setup.py  systems.py  vimmit.py
vimmit/vimm/: scraper.py  vimm_roller.py  vimm_scraper.py  vimmit.py
vimmit/vimmit/: vimm_roller.py  vimm_scraper.py  vimmit.py
