[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Vimmit"
version = "0.1.0"
description = "The Retro Game Randomiser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14",
    "requests>=2.32",
    "rich>=14.2",
    "truststore>=0.10",
]

[project.scripts]
mytool = "app.vimmit:vimmit"
